force-app/main/default/objects/adobesign__Document_Template__c/fields/adobesign__Document_Tags__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Document_Tags__c</fullName>
    <description>Salesforce record id of JSON file.</description>
    <inlineHelpText>Salesforce record id of JSON file.</inlineHelpText>
    <label>JSON File</label>
    <length>32</length>
    <type>Text</type>
</CustomField>