force-app/main/default/objects/adobesign__Document_Template__c/fields/adobesign__Generated_File_Name__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Generated_File_Name__c</fullName>
    <description>Generated File Name</description>
    <inlineHelpText>Generated File Name</inlineHelpText>
    <label>Generated File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>