force-app/main/default/objects/adobesign__Document_Template__c/fields/adobesign__Master_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Master_Object_Type__c</fullName>
    <description>Specify the Salesforce object that will be referenced for this document template. (e.g. Opportunity, Lead)</description>
    <inlineHelpText>Specify the Salesforce object that will be referenced for this document template. (e.g. Opportunity, Lead)</inlineHelpText>
    <label>Main Data Source</label>
    <length>127</length>
    <type>Text</type>
</CustomField>