force-app/main/default/objects/adobesign__Document_Template__c/fields/adobesign__Name__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Name__c</fullName>
    <description>Document Template Name</description>
    <inlineHelpText>Document Template Name</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>