force-app/main/default/objects/adobesign__Document_Template__c/fields/adobesign__Storage_Type__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Storage_Type__c</fullName>
    <description>Select Files so that the package work with the latest generation Salesforce files based system. Select Attachments to use the legacy storage object type.</description>
    <inlineHelpText>Select Files so that the package work with the latest generation Salesforce files based system. Select Attachments to use the legacy storage object type.</inlineHelpText>
    <label>Storage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>adobesign__Storage_Type</valueSetName>
    </valueSet>
</CustomField>