force-app/main/default/objects/adobesign__Document_Template__c/fields/adobesign__Tags_UpToDate__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Tags_UpToDate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A flag indicates if document tags are up to date.</description>
    <inlineHelpText>A flag indicates if document tags are up to date.</inlineHelpText>
    <label>Document Tags Up to Date</label>
    <type>Checkbox</type>
</CustomField>