force-app/main/default/objects/adobesign__Document_Template__c/fields/adobesign__Template_File__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Template_File__c</fullName>
    <description>Salesforce record id of document template file.</description>
    <inlineHelpText>Salesforce record id of document template file.</inlineHelpText>
    <label>Template File</label>
    <length>32</length>
    <type>Text</type>
</CustomField>