force-app/main/default/objects/adobesign__Document_Template__c/listViews/adobesign__AllDocumentTemplates.listView-meta.xml
<ListView>
    <fullName>adobesign__AllDocumentTemplates</fullName>
    <columns>NAME</columns>
    <columns>adobesign__Name__c</columns>
    <columns>adobesign__Master_Object_Type__c</columns>
    <columns>adobesign__Last_Modified_DateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>